@startuml

  package by.spalex.bmp.coder {
    class Decoder {
        + Decoder()
        + decode()
        - decodeTrueColor()
        - getTrueColorByte()
        - decodeColorPallete()
        - decodeRGB888()
        - decodeRGB555()
        - getRGB555Byte()
        - decodeRGB444()
        - getRGB444Byte()
    }
  }
  

  package by.spalex.bmp.coder {
    class Encoder {
        + Encoder()
        + encode()
        - encodeTrueColor()
        - encodeColorPalette()
        - encodeRGB888()
        - encodeRGB555()
        - encodeRGB444()
    }
  }

  class Bitmap{
          - bytes : byte[]
          - bitmask : Color
          - palette : Color[]
          - paletteOffset : int
  }

  Decoder o-- Bitmap : bitmap
  Encoder o-- Bitmap : bitmap

@enduml
